[package]
name = "cargo-protologic"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A small tool to assist in writing Protologic fleets."
repository = "https://github.com/Jerald/cargo-protologic"

[dependencies]
anyhow = "1.0.79"
bytesize = "1.3.0"
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
wasm-opt = "0.116.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
